<resources>
    <string name="app_name">SearchCuisineAppliction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cuisine_choice">Выбор кухни</string>
    <string name="title_italy">Италия</string>
    <string name="title_ukraine">Украина</string>
    <string name="title_armenia">Армения</string>
    <string name="title_usa">Америка</string>
    <string name="title_vengria">Венгрия</string>
</resources>