<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.searchcuisineappliction.presentation.CountriesListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_rolling_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ChoiceCoisineTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_cuisine_choice"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.645" />


        <Button
            android:id="@+id/firstCuisineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/title_italy"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/secondCuisineButton"
            app:layout_constraintTop_toBottomOf="@+id/ChoiceCoisineTextView"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/secondCuisineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/title_ukraine"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/thirdCuisineButton"
            app:layout_constraintTop_toBottomOf="@+id/firstCuisineButton"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/thirdCuisineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/title_armenia"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/forthCuisineButton"
            app:layout_constraintTop_toBottomOf="@+id/secondCuisineButton"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/forthCuisineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/title_usa"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/fifthCuisineButton"
            app:layout_constraintTop_toBottomOf="@+id/thirdCuisineButton"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/fifthCuisineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/title_vengria"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forthCuisineButton"
            tools:layout_editor_absoluteX="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>